物体検出学習中

--- a/2_AzureComputervision/物体検出アプリ.ipynb
+++ b/2_AzureComputervision/物体検出アプリ.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nEND - Authenticate\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from azure.cognitiveservices.vision.computervision import ComputerVisionClient\n",
     "from azure.cognitiveservices.vision.computervision.models import OperationStatusCodes\n",
@@ -28,71 +17,30 @@
     "import sys\n",
     "import time\n",
     "\n",
-    "'''\n",
-    "Authenticate\n",
-    "Authenticates your credentials and creates a client.\n",
-    "'''\n",
+    "\n",
     "subscription_key = os.environ[\"VISION_KEY\"]\n",
     "endpoint = os.environ[\"VISION_ENDPOINT\"]\n",
     "\n",
     "computervision_client = ComputerVisionClient(endpoint, CognitiveServicesCredentials(subscription_key))\n",
-    "'''\n",
-    "END - Authenticate\n",
-    "'''\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "画像タグの取得\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "===== Tag an image - remote =====\n",
-      "Tags in the remote image: \n",
-      "'outdoor' with confidence 99.00%\n",
-      "'building' with confidence 98.81%\n",
-      "'sky' with confidence 98.21%\n",
-      "'stadium' with confidence 98.17%\n",
-      "'ancient rome' with confidence 96.16%\n",
-      "'ruins' with confidence 95.04%\n",
-      "'amphitheatre' with confidence 93.99%\n",
-      "'ancient roman architecture' with confidence 92.65%\n",
-      "'historic site' with confidence 89.55%\n",
-      "'ancient history' with confidence 89.54%\n",
-      "'history' with confidence 86.72%\n",
-      "'archaeological site' with confidence 84.41%\n",
-      "'travel' with confidence 65.85%\n",
-      "'large' with confidence 61.02%\n",
-      "'city' with confidence 56.57%\n",
-      "\n",
-      "End of Computer Vision quickstart.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "'''\n",
-    "Quickstart variables\n",
-    "These variables are shared by several examples\n",
-    "'''\n",
-    "# Images used for the examples: Describe an image, Categorize an image, Tag an image, \n",
-    "# Detect faces, Detect adult or racy content, Detect the color scheme, \n",
-    "# Detect domain-specific content, Detect image types, Detect objects\n",
-    "images_folder = os.path.join (os.path.dirname(os.path.abspath(r\"C:\\Users\\yyy_f\\OneDrive\\デスクトップ\\sandbox\\streamlit_train\\2_AzureComputervision\\image-generation-ai.jpg\")), \"images\")\n",
     "remote_image_url = \"https://raw.githubusercontent.com/Azure-Samples/cognitive-services-sample-data-files/master/ComputerVision/Images/landmark.jpg\"\n",
-    "'''\n",
-    "END - Quickstart variables\n",
-    "'''\n",
     "\n",
-    "\n",
-    "'''\n",
-    "Tag an Image - remote\n",
-    "This example returns a tag (key word) for each thing in the image.\n",
-    "'''\n",
-    "print(\"===== Tag an image - remote =====\")\n",
     "# Call API with remote image\n",
     "tags_result_remote = computervision_client.tag_image(remote_image_url )\n",
     "\n",
@@ -103,11 +51,111 @@
     "else:\n",
     "    for tag in tags_result_remote.tags:\n",
     "        print(\"'{}' with confidence {:.2f}%\".format(tag.name, tag.confidence * 100))\n",
-    "print()\n",
-    "'''\n",
-    "END - Tag an Image - remote\n",
-    "'''\n",
-    "print(\"End of Computer Vision quickstart.\")"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "画像カテゴリ取得"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remote_image_features = [\"categories\"]\n",
+    "categorize_results_remote = computervision_client.analyze_image(remote_image_url,remote_image_features)\n",
+    "\n",
+    "print(\"Categories from remote image:\")\n",
+    "if (len(categorize_results_remote.categories) ==0):\n",
+    "    print(\"No categories detected.\")\n",
+    "else:\n",
+    "    for category in categorize_results_remote.categories:\n",
+    "        print(\"'{}' with confidence{:.2f}%\".format(category.name,category.score *100))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "物体の検出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detecting objects in remote image:\n",
+      "object at location 213, 365, 85, 208\n",
+      "object at location 218, 402, 179, 384\n",
+      "object at location 238, 417, 298, 416\n",
+      "object at location 116, 419, 60, 386\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detect objects\n",
+    "# Print detected objects results with bounding boxes\n",
+    "remote_image = \"https://raw.githubusercontent.com/Azure-Samples/cognitive-services-sample-data-files/master/ComputerVision/Images/objects.jpg\"\n",
+    "results_remote = computervision_client.detect_objects(remote_image)\n",
+    "\n",
+    "print(\"Detecting objects in remote image:\")\n",
+    "\n",
+    "if len(results_remote.objects) == 0:\n",
+    "    print(\"No objects detected.\")\n",
+    "else:\n",
+    "    for object in results_remote.objects:\n",
+    "        print(\"object at location {}, {}, {}, {}\".format( \\\n",
+    "        object.rectangle.x, object.rectangle.x + object.rectangle.w, \\\n",
+    "        object.rectangle.y, object.rectangle.y + object.rectangle.h))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ローカルファイルに対応"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detecting objects in local image:\n",
+      "object at location 879, 1201, 262, 773\n",
+      "object at location 426, 1085, 835, 1271\n"
+     ]
+    }
+   ],
+   "source": [
+    "local_image_path = 'sample01.jpg'\n",
+    "local_image = open(local_image_path,\"rb\")\n",
+    "\n",
+    "results_local = computervision_client.detect_objects_in_stream(local_image)\n",
+    "\n",
+    "print(\"Detecting objects in local image:\")\n",
+    "\n",
+    "if len(results_local.objects) == 0:\n",
+    "    print(\"No objects detected.\")\n",
+    "else:\n",
+    "    for object in results_local.objects:\n",
+    "        print(\"object at location {}, {}, {}, {}\".format( \\\n",
+    "        object.rectangle.x, object.rectangle.x + object.rectangle.w, \\\n",
+    "        object.rectangle.y, object.rectangle.y + object.rectangle.h))\n"
    ]
   }
  ],
